<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/text_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_summary"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/total_billAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_bill"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <TextView
        android:id="@+id/total_tipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_tipAmount"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_billAmount"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/total_billPlusTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_total"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_tipAmount"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/total_tipPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_tipPerPerson"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_billPlusTip"
        app:layout_constraintVertical_bias="0.112" />

    <TextView
        android:id="@+id/value_billAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output_bill"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toEndOf="@+id/total_billAmount"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/value_tipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output_tipAmount"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toEndOf="@+id/total_billAmount"
        app:layout_constraintTop_toBottomOf="@+id/value_billAmount"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/value_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output_total"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toEndOf="@+id/total_billAmount"
        app:layout_constraintTop_toBottomOf="@+id/value_tipAmount"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/value_tipPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output_tipPerPerson"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toEndOf="@+id/total_billAmount"
        app:layout_constraintTop_toBottomOf="@+id/value_total"
        app:layout_constraintVertical_bias="0.108" />

    <Button
        android:id="@+id/button_calculateNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_calculateNew"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_tipPerPerson"
        app:layout_constraintVertical_bias="0.457" />

</androidx.constraintlayout.widget.ConstraintLayout>